feat(Core): Transição para processamento de dados de produção
Este commit marca a transição fundamental do projeto GetSmart da fase de protótipo/simulação para um serviço de processamento de dados de produção. A aplicação agora consome dados de um dispositivo físico (medidor de energia) através do ThingsBoard, realiza análises e envia os dados enriquecidos para o Power BI.

ALTERAÇÕES PRINCIPAIS:
- **Fonte de Dados:** A geração de dados aleatórios foi removida. A aplicação agora atua como um cliente da API do ThingsBoard, buscando a telemetria mais recente de um dispositivo específico.
- **Estrutura do Projeto:** Classes obsoletas (GerenciamentoRecurso, AnaliseEficiencia, etc.) foram removidas. A lógica de custo foi isolada na classe CalculoDeCusto.
- **Fluxo de Dados:** O loop principal em Main.java foi redesenhado para seguir um padrão ETL: busca periódica de dados, processamento em memória e envio para o Power BI.
- **Robustez:** Adicionadas funções de parsing seguras para lidar com dados ausentes ou nulos da API, prevenindo falhas em tempo de execução.
- **Integração:** O payload enviado ao Power BI foi atualizado para refletir o esquema completo de 20+ métricas do medidor de energia.

PROBLEMAS CORRIGIDOS:
- Resolve múltiplos erros de conexão (404 Not Found, 400 Bad Request) com as APIs do ThingsBoard e Power BI através da correção de IPs, Device IDs e da estrutura do JSON.